force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <inlineHelpText>Bank Account Number</inlineHelpText>
    <label>Account Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>