force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Bank_Account_Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Entity_ID__c</fullName>
    <label>Bank Account Entity ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>