force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Name__c</fullName>
    <description>Bank Account Name that will be sent to SEPA</description>
    <inlineHelpText>Bank Account Name that will be sent to SEPA</inlineHelpText>
    <label>Bank Account Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>