force-app/main/default/objects/npe03__Recurring_Donation__c/fields/BIC__c.field-meta.xml
<CustomField>
    <fullName>BIC__c</fullName>
    <inlineHelpText>Donor BIC</inlineHelpText>
    <label>BIC</label>
    <length>11</length>
    <type>Text</type>
</CustomField>