force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Date_Mandate_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_Mandate_Signed__c</fullName>
    <inlineHelpText>If this is blank, the date the recurring donation was established is used</inlineHelpText>
    <label>Date Mandate Signed</label>
    <type>Date</type>
</CustomField>