force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Donor_ID__c.field-meta.xml
<CustomField>
    <fullName>Donor_ID__c</fullName>
    <inlineHelpText>Copied from the Donor ID on the Contact when the recurring donation is created</inlineHelpText>
    <label>Donor ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>