force-app/main/default/objects/npe03__Recurring_Donation__c/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <inlineHelpText>Donor IBAN</inlineHelpText>
    <label>IBAN</label>
    <length>34</length>
    <type>Text</type>
</CustomField>