force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Manual_Mandate_Reference__c.field-meta.xml
<CustomField>
    <fullName>Manual_Mandate_Reference__c</fullName>
    <inlineHelpText>If the mandate is already set up, it can be entered here and this will override the Unique Mandate Reference</inlineHelpText>
    <label>Manual Mandate Reference</label>
    <length>35</length>
    <type>Text</type>
</CustomField>