force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Match_Ref__c.field-meta.xml
<CustomField>
    <fullName>Match_Ref__c</fullName>
    <description>Might be used to match transactions</description>
    <inlineHelpText>This field is taken from DevEx it seems it was used in situations where the Donor ID did not match the Donor Reference coming through on the Bank file so rather then change the system DonorID USE this field to put in the matching Donor reference frm bank.</inlineHelpText>
    <label>Match Ref</label>
    <length>20</length>
    <type>Text</type>
</CustomField>