force-app/main/default/objects/npe03__Recurring_Donation__c/fields/SEPA_Direct_Debit__c.field-meta.xml
<CustomField>
    <fullName>SEPA_Direct_Debit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This signifies that all related donations will be included in the SEPA Direct Debit Process</description>
    <inlineHelpText>This signifies that all related donations will be included in the SEPA Direct Debit Process</inlineHelpText>
    <label>SEPA Direct Debit</label>
    <type>Checkbox</type>
</CustomField>