force-app/main/default/objects/npe03__Recurring_Donation__c/fields/SEPA_Reject_Code__c.field-meta.xml
<CustomField>
    <fullName>SEPA_Reject_Code__c</fullName>
    <inlineHelpText>if this was rejected, this is the latest SEPA Reject Code</inlineHelpText>
    <label>SEPA Reject Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>