force-app/main/default/objects/npe03__Recurring_Donation__c/fields/SEPA_transaction_code__c.field-meta.xml
<CustomField>
    <fullName>SEPA_transaction_code__c</fullName>
    <inlineHelpText>No Longer used as from November 2016, all recurring donations will have a type of &quot;RCUR&quot;</inlineHelpText>
    <label>SEPA transaction code (deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RCUR</fullName>
                <default>true</default>
                <label>RCUR</label>
            </value>
            <value>
                <fullName>FRST</fullName>
            </value>
            <value>
                <fullName>OOFF</fullName>
            </value>
            <value>
                <fullName>FNAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>