force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Unique_Mandate_Reference__c.field-meta.xml
<CustomField>
    <fullName>Unique_Mandate_Reference__c</fullName>
    <displayFormat>UMR{YY}{00000}</displayFormat>
    <label>Unique Mandate Reference</label>
    <type>AutoNumber</type>
</CustomField>