force-app/main/default/objects/npe03__Recurring_Donation__c/validationRules/SEPA_Must_enter_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>SEPA_Must_enter_Amount</fullName>
    <active>true</active>
    <description>This is a SEPA Direct Debit and must have an Amount</description>
    <errorConditionFormula>SEPA_Direct_Debit__c &amp;&amp; npe03__Amount__c = 0</errorConditionFormula>
    <errorDisplayField>npe03__Amount__c</errorDisplayField>
    <errorMessage>This is a SEPA Direct Debit so you must enter an Amount</errorMessage>
</ValidationRule>