force-app/main/default/objects/npe03__Recurring_Donation__c/validationRules/SEPA_Must_haveBIC.validationRule-meta.xml
<ValidationRule>
    <fullName>SEPA_Must_haveBIC</fullName>
    <active>false</active>
    <description>This is a SEPA Direct Debit and must have a BIC</description>
    <errorConditionFormula>SEPA_Direct_Debit__c &amp;&amp; ISBLANK( BIC__c )</errorConditionFormula>
    <errorDisplayField>BIC__c</errorDisplayField>
    <errorMessage>This is a SEPA Direct Debit so you must enter a BIC</errorMessage>
</ValidationRule>