force-app/main/default/objects/npe03__Recurring_Donation__c/validationRules/SEPA_Must_haveIBAN.validationRule-meta.xml
<ValidationRule>
    <fullName>SEPA_Must_haveIBAN</fullName>
    <active>false</active>
    <description>This is a SEPA Direct Debit and must have an IBAN</description>
    <errorConditionFormula>SEPA_Direct_Debit__c &amp;&amp; ISBLANK( IBAN__c   )</errorConditionFormula>
    <errorDisplayField>IBAN__c</errorDisplayField>
    <errorMessage>This is a SEPA Direct Debit so you must enter an IBAN</errorMessage>
</ValidationRule>