force-app/main/default/objects/npe03__Recurring_Donation__c/validationRules/SEPA_Must_HaveMandateSigned.validationRule-meta.xml
<ValidationRule>
    <fullName>SEPA_Must_HaveMandateSigned</fullName>
    <active>true</active>
    <description>If a SEPA DD, the Mandate must be signed</description>
    <errorConditionFormula>SEPA_Direct_Debit__c &amp;&amp; ISBLANK( Date_Mandate_Signed__c )</errorConditionFormula>
    <errorDisplayField>Date_Mandate_Signed__c</errorDisplayField>
    <errorMessage>This is a SEPA Direct Debit so the Mandate must be signed</errorMessage>
</ValidationRule>